# mystudying-autogen

./: .gitignore  README.md  pyproject.toml  scripts.py
